Registration, requests and responses added

--- a/insolationapp/src/main/resources/application.yaml
+++ b/insolationapp/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ admin:
   email: admin@admin.com
   password: admin
 spring:
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
   datasource:
     url: jdbc:postgresql://localhost:5432/db
     username: admin
