--- a/insolationapp/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/insolationapp/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,53 +1,7 @@
 databaseChangeLog:
-  - changeSet:
-      id: 1
-      author: admin
-      changes:
-        - createTable:
-            tableName: users
-            columns:
-              - column:
-                  name: id
-                  type: BIGSERIAL
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-              - column:
-                  name: username
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-                    unique: true
-              - column:
-                  name: password
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: email
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: full_name
-                  type: VARCHAR(255)
-              - column:
-                  name: created_at
-                  type: TIMESTAMP
-                  constraints:
-                    nullable: false
-              - column:
-                  name: updated_at
-                  type: TIMESTAMP
-                  constraints:
-                    nullable: false
-              - column:
-                  name: active
-                  type: BOOLEAN
-                  constraints:
-                    nullable: false
-              - column:
-                  name: role
-                  type: VARCHAR(50)
-                  constraints:
-                    nullable: false
+  - include:
+      file: db/changelog/changeset-users.yaml
+  - include:
+      file: db/changelog/changeset-requests.yaml
+  - include:
+      file: db/changelog/changeset-responses.yaml
