--- a/insolationapp/src/main/resources/db/changelog/changeset-requests.yaml
+++ b/insolationapp/src/main/resources/db/changelog/changeset-requests.yaml
@@ -13,6 +13,9 @@ databaseChangeLog:
                     constraints:
                       primaryKey: true
                 - column:
+                    name: request_name
+                    type: VARCHAR(255)
+                - column:
                     name: user_id
                     type: BIGINT
                     constraints:
